; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/kvm/extr_book3s_64_mmu_hv.c_resize_hpt_allocate.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/kvm/extr_book3s_64_mmu_hv.c_resize_hpt_allocate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_resize_hpt = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [36 x i8] c"resize_hpt_allocate(): HPT @ 0x%lx\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kvm_resize_hpt*)* @resize_hpt_allocate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @resize_hpt_allocate(%struct.kvm_resize_hpt* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.kvm_resize_hpt*, align 8
  %4 = alloca i32, align 4
  store %struct.kvm_resize_hpt* %0, %struct.kvm_resize_hpt** %3, align 8
  %5 = load %struct.kvm_resize_hpt*, %struct.kvm_resize_hpt** %3, align 8
  %6 = getelementptr inbounds %struct.kvm_resize_hpt, %struct.kvm_resize_hpt* %5, i32 0, i32 0
  %7 = load %struct.kvm_resize_hpt*, %struct.kvm_resize_hpt** %3, align 8
  %8 = getelementptr inbounds %struct.kvm_resize_hpt, %struct.kvm_resize_hpt* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @kvmppc_allocate_hpt(%struct.TYPE_2__* %6, i32 %9)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = icmp slt i32 %11, 0
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %4, align 4
  store i32 %14, i32* %2, align 4
  br label %22

15:                                               ; preds = %1
  %16 = load %struct.kvm_resize_hpt*, %struct.kvm_resize_hpt** %3, align 8
  %17 = load %struct.kvm_resize_hpt*, %struct.kvm_resize_hpt** %3, align 8
  %18 = getelementptr inbounds %struct.kvm_resize_hpt, %struct.kvm_resize_hpt* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @resize_hpt_debug(%struct.kvm_resize_hpt* %16, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i32 %20)
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %15, %13
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i32 @kvmppc_allocate_hpt(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @resize_hpt_debug(%struct.kvm_resize_hpt*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
